Shang New Live/src/objects/Checklist_Remarks__c.object
<CustomObject>
    <fields>
        <fullName>AWS_Id__c</fullName>
        <externalId>true</externalId>
        <label>AWS Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Backend_Last_Updated_DateTime__c</fullName>
        <label>Backend Last Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Checklist Remarks</relationshipLabel>
        <relationshipName>Checklist_Remark</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Daily Checklist Item</label>
        <referenceTo>Daily_Checklist_Item__c</referenceTo>
        <relationshipLabel>Checklist Remarks</relationshipLabel>
        <relationshipName>Checklist_Remarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image1_Url__c</fullName>
        <label>Image1 Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image1__c</fullName>
        <formula>IF(ISBLANK( Image1_Url__c),&quot;&quot;, IMAGE(Image1_Url__c, &quot;Image 1&quot;,75, 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Issue_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time__c</fullName>
        <label>Last Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_From__c</fullName>
        <label>Last Updated From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklist Remarks</relationshipLabel>
        <relationshipName>Checklist_Remarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Checklist Remarks</relationshipLabel>
        <relationshipName>Request_Remarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <description>This is used to store task Id as SF doesn&apos;t allow to create lookup field to a task.</description>
        <label>Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Checklist Remark</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Checklist_Item__c</columns>
        <columns>AWS_Id__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Checklist Remarks No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Remarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>